2013-12-14  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/third-party/scipoptsuite-3.0.2:

	Untar the packages distributed with SCIP so that we can manually
	tell it to use Gerardus GMP, instead of trying to use a
	system-installed version.

	* Add cpp/src/third-party/scipoptsuite-3.0.2:

	- Solving Constraint Integer Programs library, Konrad-Zuse-Zentrum
	für Informationstechnik Berlin, Division Scientific Computing,
	Department Optimization.

	- This is SCIP Optimization Suite, that includes SCIP, SoPlex,
	ZIMPL, GCG, and UG with an easy-to-use Makefile.

	http://scip.zib.de/

2013-12-13  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ThirdPartyToolbox/OptiToolbox:

	- A free MATLAB Toolbox for Optimization. Copyright (C) 2011-2013,
	Jonathan Currie. v2.00.

	http://www.i2c2.aut.ac.nz/Wiki/OPTI/index.php

2013-12-12  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/vertex_untangle.m: (0.2.2)

	- Actually, (0.2.0) was correct. It's Freitag and Plassmann (2000)
	that had another error. It's just a constant value that shouldn't
	change the result, but we'd rather have the right formulation in
	the implementation.

2013-12-11  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/vertex_untangle.m: (0.2.1)

	- Fix small bug. Linear program formulation typo.

	* matlab/ManifoldToolbox/vertex_untangle.m: (0.2.0)

	- Fix bug. The original formulation of the linear programming
	problem in Freitag and Plassmann (2000) has some errors, but so
	did our implementation. Hopefully fixed now.

	- Use simplex method (as in original paper), instead of
	interior-point. Simplex is faster for small problems, which will
	usually be the case with closed fans.

	- Assume that perimeter vertices are counter-clockwise oriented in
	TRI, as in the paper. This is easy to enforce with third-party
	function surfreorient() from iso2mesh.

	- To sort vertices in the perimeter as a polygonal line, now we
	don't need to compute one branch to the antipodes, and another